# paper2chunk

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SOTA_IMPLEMENTATION.md  pyproject.toml  requirements.txt  setup.py
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md
examples/: demo.py  pipeline_example.py  sota_pipeline_example.py  usage_examples.py
paper2chunk/: __init__.py  cli.py  config.py  models.py  pipeline.py  pipeline_legacy.py  pipeline_sota.py
paper2chunk/core/: __init__.py  chart_analyzer.py  llm_rewriter.py  logic_repair.py  metadata_injector.py  pdf_parser.py  pdf_parser_new.py  semantic_chunker.py  semantic_chunker_new.py  tree_builder.py
paper2chunk/output_formatters/: __init__.py  formatters.py
paper2chunk/utils/: __init__.py  text_utils.py
tests/: __init__.py  test_chart_analyzer_injection.py  test_config.py  test_formatters.py  test_metadata_injector.py  test_mineru_parser_new.py  test_pdf_parser.py  test_semantic_chunker.py  test_utils.py
